fixed spacing

--- a/artwebsite/src/SummerCamp.css
+++ b/artwebsite/src/SummerCamp.css
@@ -141,7 +141,7 @@
   align-items: center;
   justify-content: center;
   gap: 30px;
-  margin: 0 auto;
+  margin: 30px auto;
 }
 
 .summer-body-intro p {
